# release-rollback-decision-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: CASE_STUDY.md
docs/github-actions/: ci.yml
infra/kubernetes/: deployment.yaml
infra/terraform/: main.tf
reports/: approval_audit.json  approval_audit.md  post_deploy_review.json  post_deploy_review.md  risky_release_report.json
samples/: approval_audit.json  post_deploy_review.json  risky_release.json  safe_release.json
scripts/: api_smoke.py
src/app/: main.py
src/release_rollback/: __init__.py  cli.py  evaluator.py  models.py
tests/: test_api.py  test_cli.py  test_evaluator.py
